--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "http://SreelekshmiSanthosh.github.io/Portfolio",
   "scripts": {
     "dev": "vite",
-    "preload": "npm run build",
-    "deploy": "gh-pages -d build",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
